src/objects/DSCORGPKG__AutoUpdateSettings__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__AccountBatchUpdate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AccountBatchUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__AlwaysDisplayAccountIntermediatePage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Always Display Account Intermediate Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Append_And_Clean_Last_Run_Account__c</fullName>
        <label>Append And Clean Last Run Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Append_And_Clean_Last_Run_Contact__c</fullName>
        <label>Append And Clean Last Run Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Append_And_Clean_Last_Run_Lead__c</fullName>
        <label>Append And Clean Last Run Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ContactBatchUpdate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContactBatchUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__CreateNewLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It works to create Leads on its check, when we will not allow to create conflict, synchronously with isPreventConflict.</description>
        <label>CreateNewLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Do_not_Allow_Contacts_without_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Allow Contacts without Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Enable_Automatic_Weekly_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Automatic Weekly Update on DiscoverOrg Technology</description>
        <label>Enable Automatic Weekly Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Enable_Technology_Imports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable Technology Imports to the DiscoverOrg Technologies Object</description>
        <label>Enable Technology Imports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__LeadBatchUpdate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>LeadBatchUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Legacy_Triggers_Category__c</fullName>
        <label>Legacy Triggers Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__OppAlertDeleteDate__c</fullName>
        <label>OppAlertDeleteDate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__OppAlert_ContributoryTopics__c</fullName>
        <label>OppAlert ContributoryTopics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__OppAlert_OpportunityType__c</fullName>
        <label>OppAlert OpportunityType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Remove_Inactive_Technologies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Inactive Technologies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Search_By_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search By Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Search_Type__c</fullName>
        <label>Search Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                    <default>true</default>
                    <label>Exact</label>
                </value>
                <value>
                    <fullName>Like *</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Selected_Technology__c</fullName>
        <label>Selected Technology</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Tiggers_Category__c</fullName>
        <label>Tiggers Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Tiggers_Department__c</fullName>
        <label>Tiggers Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__TriggerDeleteDate__c</fullName>
        <label>TriggerDeleteDate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Triggers_Topics_Category__c</fullName>
        <label>Triggers Topics Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__UpdateAccountFieldsifNULL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Account Fields only if NULL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__UpdateContactFieldsIfNULL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Contact Fields only if NULL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__UpdateLeadFieldsifNULL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Lead Fields only if NULL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customAccountField__c</fullName>
        <label>customAccountField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customContactField__c</fullName>
        <label>customContactField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customLeadField__c</fullName>
        <label>customLeadField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__disableAccountObjectInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disableAccountObjectInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__disableAccountObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disableAccountObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__disableContactObjectInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disableContactObjectInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__disableContactObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disableContactObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__disableLeadObjectInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disableLeadObjectInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__disableLeadObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disableLeadObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isAccountTriggerRecImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccountTriggerRecImport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isAppendnCleanSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAppendnCleanSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isCheckAddUpdateAllCompsAndContacts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isCheckAddUpdateAllCompsAndContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isCheckAddUpdateAll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCheckAddUpdateAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isCheckAddUpdateCompanyandContacts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isCheckAddUpdateCompanyandContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isContactTriggerRecImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isContactTriggerRecImport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isCustomFieldAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomFieldAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isCustomFieldContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomFieldContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isCustomFieldLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomFieldLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isDeleteOppAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleteOppAlerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isDeleteTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleteTriggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isDuplicateCheckContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDuplicateCheckContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isDuplicateCheckLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDuplicateCheckLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isExportCSVCheck__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isExportCSVCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isLeadTriggerRecImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLeadTriggerRecImport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isOppAlertsRecImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOppAlertsRecImport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isOwnerChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOwnerChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isPersonnelTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPersonnelTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isPreventConflict__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isPreventConflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isProjectTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProjectTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__scheduleDeleteConflict__c</fullName>
        <label>scheduleDeleteConflict</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                    <default>true</default>
                    <label>1 Month</label>
                </value>
                <value>
                    <fullName>Do not automatically delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__scheduleDeleteHistory__c</fullName>
        <label>scheduleDeleteHistory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                    <default>true</default>
                    <label>1 Month</label>
                </value>
                <value>
                    <fullName>Do not automatically delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AutoUpdateSettings</label>
    <nameField>
        <label>AutoUpdateSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoUpdateSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>